[package]
name = "wally"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "macos-private-api", "protocol-asset" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.12"
serde_derive = "1.0.197"
notify = "6.1.1"
dirs = "5.0.1"
wallpaper = "3.2.0"
window-vibrancy = "0.5.0"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
